--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,10 @@ project(MagnumExamples CXX)
 # Use folders for nice tree in Visual Studio and XCode
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
+set(CMAKE_TOOLCHAIN_FILE ${PROJECT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake)
+message(STATUS "CMAKE_TOOLCHAIN_FILE: ${CMAKE_TOOLCHAIN_FILE}")
+include(${CMAKE_TOOLCHAIN_FILE})
+
 set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/modules/" ${CMAKE_MODULE_PATH})
 find_package(Magnum REQUIRED)
 
@@ -115,24 +119,24 @@ if(NOT DEFINED _MAGNUMEXAMPLES_ACCEPT_DEPRECATED_UNPREFIXED_OPTIONS)
 endif()
 
 option(MAGNUM_WITH_ARCBALL_EXAMPLE "Build ArcBall Camera example" OFF)
-option(MAGNUM_WITH_ANIMATED_GIF_EXAMPLE "Build Animated Gif example" OFF)
-option(MAGNUM_WITH_AREALIGHTS_EXAMPLE "Build Area Lights example (requires the Ui library and some TTF font plugin)" OFF)
-option(MAGNUM_WITH_AUDIO_EXAMPLE "Build Audio example (requires the Audio library and the StbVorbisAudioImporter plugin)" OFF)
-option(MAGNUM_WITH_BOX2D_EXAMPLE "Build Box2D integration example" OFF)
+option(MAGNUM_WITH_ANIMATED_GIF_EXAMPLE "Build Animated Gif example" ON)
+option(MAGNUM_WITH_AREALIGHTS_EXAMPLE "Build Area Lights example (requires the Ui library and some TTF font plugin)" ON)
+option(MAGNUM_WITH_AUDIO_EXAMPLE "Build Audio example (requires the Audio library and the StbVorbisAudioImporter plugin)" ON)
+option(MAGNUM_WITH_BOX2D_EXAMPLE "Build Box2D integration example" ON)
 option(MAGNUM_WITH_BULLET_EXAMPLE "Build Bullet integration example (requires the BulletIntegration library)" OFF)
 cmake_dependent_option(MAGNUM_WITH_CUBEMAP_EXAMPLE "Build CubeMap example (requires some JPEG importer plugin)" OFF "NOT MAGNUM_TARGET_GLES" OFF)
 option(MAGNUM_WITH_DART_EXAMPLE "Build DART integration example (requires the DartIntegration library)" OFF)
-option(MAGNUM_WITH_FLUIDSIMULATION2D_EXAMPLE "Build 2D Fluid Simulation example (requires the ImGui integration)" OFF)
-option(MAGNUM_WITH_FLUIDSIMULATION3D_EXAMPLE "Build 3D Fluid Simulation example (requires the ImGui integration)" OFF)
-option(MAGNUM_WITH_IMGUI_EXAMPLE "Build ImGui example" OFF)
+option(MAGNUM_WITH_FLUIDSIMULATION2D_EXAMPLE "Build 2D Fluid Simulation example (requires the ImGui integration)" ON)
+option(MAGNUM_WITH_FLUIDSIMULATION3D_EXAMPLE "Build 3D Fluid Simulation example (requires the ImGui integration)" ON)
+option(MAGNUM_WITH_IMGUI_EXAMPLE "Build ImGui example" ON)
 option(MAGNUM_WITH_LEAPMOTION_EXAMPLE "Build LeapMotion example" OFF)
 option(MAGNUM_WITH_MOUSEINTERACTION_EXAMPLE "Build Mouse Interaction example" OFF)
-cmake_dependent_option(MAGNUM_WITH_MOTIONBLUR_EXAMPLE "Build Motion Blur example" OFF "NOT MAGNUM_TARGET_GLES" OFF)
-option(MAGNUM_WITH_OCTREE_EXAMPLE "Build Octree example" OFF)
+cmake_dependent_option(MAGNUM_WITH_MOTIONBLUR_EXAMPLE "Build Motion Blur example" ON "NOT MAGNUM_TARGET_GLES" OFF)
+option(MAGNUM_WITH_OCTREE_EXAMPLE "Build Octree example" ON)
 option(MAGNUM_WITH_OVR_EXAMPLE "Build OVR example" OFF)
 option(MAGNUM_WITH_PICKING_EXAMPLE "Build Picking example" OFF)
 option(MAGNUM_WITH_PRIMITIVES_EXAMPLE "Build Primitives example" OFF)
-option(MAGNUM_WITH_RAYTRACING_EXAMPLE "Build Ray Tracing example" OFF)
+option(MAGNUM_WITH_RAYTRACING_EXAMPLE "Build Ray Tracing example" ON)
 option(MAGNUM_WITH_SHADOWS_EXAMPLE "Build Shadow Mapping example" OFF)
 option(MAGNUM_WITH_TEXT_EXAMPLE "Build Text example (requires some TTF font plugin)" OFF)
 cmake_dependent_option(MAGNUM_WITH_TEXTUREDQUAD_EXAMPLE "Build Textured Quad example (requires some TGA importer plugin)" OFF "NOT MAGNUM_TARGET_GLES" OFF)
@@ -141,7 +145,7 @@ option(MAGNUM_WITH_TRIANGLE_EXAMPLE "Build Triangle example" ON)
 option(MAGNUM_WITH_TRIANGLE_PLAIN_GLFW_EXAMPLE "Build Plain GLFW Triangle example" OFF)
 option(MAGNUM_WITH_TRIANGLE_SOKOL_EXAMPLE "Build sokol_gfx Triangle example" OFF)
 option(MAGNUM_WITH_TRIANGLE_VULKAN_EXAMPLE "Build Vulkan Triangle example" OFF)
-option(MAGNUM_WITH_VIEWER_EXAMPLE "Build Viewer example (requires the AnySceneImporter plugin)" OFF)
+option(MAGNUM_WITH_VIEWER_EXAMPLE "Build Viewer example (requires the AnySceneImporter plugin)" ON)
 if(CORRADE_TARGET_EMSCRIPTEN)
     option(MAGNUM_WITH_WEBXR_EXAMPLE "Build WebXR example" OFF)
 endif()
@@ -222,4 +226,5 @@ if(NOT DEFINED CMAKE_RUNTIME_OUTPUT_DIRECTORY AND NOT DEFINED CMAKE_LIBRARY_OUTP
     set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/$<CONFIG>/lib CACHE PATH "" FORCE)
 endif()
 
+add_subdirectory(magnum-integration EXCLUDE_FROM_ALL)
 add_subdirectory(src)
